# deno_gi

./: .gitignore  README.md  deno.json  meson.build  mod.ts
.github/workflows/: test.yml
examples/: adwaita.js  adwaita.ts  builder.js  builder.ts  bytes.ts  counter.js  gstreamer.ts  hello.js  hello.ts  manual_loop.js  manual_loop.ts  register-class.ts  style.css  stylesheet.js  stylesheet.ts  template.ui  template2.ui
src/: createInstance.js  gi.js  gi.ts  gvalue.js  gvalue.ts  handleInfo.js  handleInfo.ts  interface.js  interface.ts  prepare.js  prepare.ts  utils.js  utils.ts
src/base_utils/: convert.ts  ffipp.d.ts  ffipp.js  types.ts
src/bindings/: enums.js  enums.ts  gTypes.ts  girepository.js  girepository.ts  glib.js  gobject.js  gobject.ts  mod.js  mod.ts  ranges.ts
src/bindings/glib/: enums.json  glib.js  symbols.json
src/bindings/gobject/: enums.json  enums.ts  gobject.js  symbols.json  symbols.ts
src/bindings/gobject-introspection/: enums.json  enums.ts  girepository.js  symbols.json  symbols.ts
src/overrides/: GLib.ts  GObject.ts  Gtk.ts  mod.ts
src/types/: argument.js  argument.ts  callable.js  callable.ts  callback.js  callback.ts  constant.js  constant.ts  constructor.js  enum.js  enum.ts  field.js  field.ts  function.js  interface.js  interface.ts  method.js  object.js  object.ts  prop.js  prop.ts  signal.js  signal.ts  struct.js  struct.ts  value.js  value.ts
src/types/argument/: array.js  array.ts  interface.js  interface.ts  (+2 more)
src/utils/: dataView.ts  dataview.js  dataview.ts  error.ts  gobject.js  gobject.ts  library.ts  object.ts  string.ts  type.ts
subprojects/: gobject-introspection.wrap
test/: meson.build
test/everything/: everything.ts  meson.build
tests/: meson.build
tests/everything/: meson.build
tests/gi/: meson.build
tests/gi/regress/: meson.build  regress.ts
tests/utils/: asserts.ts  string.ts
(+18 files in other folders)
